--- a/src/Calculator/Views/GraphingCalculator/GraphingSettings.xaml
+++ b/src/Calculator/Views/GraphingCalculator/GraphingSettings.xaml
@@ -192,7 +192,9 @@
                        Margin="0,16,0,6"
                        Style="{StaticResource SubTitleTextBoxStyle}"
                        AutomationProperties.HeadingLevel="Level2"/>
-            <ComboBox MinWidth="200" SelectedItem="{x:Bind ViewModel.Graph.LineWidth, Mode=TwoWay}">
+            <ComboBox MinWidth="200"
+                      HorizontalAlignment="Stretch"
+                      SelectedItem="{x:Bind ViewModel.Graph.LineWidth, Mode=TwoWay}">
                 <ComboBox.Items>
                     <x:Double>1.0</x:Double>
                     <x:Double>2.0</x:Double>
